<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">绝密档案</string>
    <string name="ActivityMainTitle">绝密档案</string>
    <string name="main_navigation_home">首页</string>
    
    <string name="register_title">帐号注册</string>
    <string name="register_account_tip">请填写帐号</string>
    <string name="register_nickname_tip">请填写昵称</string>
    <string name="register_password_tip">请填写密码</string>
    <string name="register_password_again_tip">请再次输入密码</string>
    <string name="register_second_password_tip">请输入二级密码</string>
    <string name="register_submit">提交</string>
    
    <string name="main_navigation_catagory">分类</string>
    <string name="main_navigation_car">购物车</string>
    <string name="main_code_buy">我的资料</string>
    <string name="main_navigation_more">更多</string>
    <string name="app_close">关闭应用程序</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_ok">确 定</string>
    <string name="cart_item_hint">购物车还是空的,快去选购吧~ !</string>
    <string name="more">更多</string>
    <string name="tab_list">记录列表</string>
    <string name="tab_notice">密码提示</string>
    <string name="tab_myhome">我的资料</string>
    <string name="tab_more">更多设置</string>
    <string name="tab_log">操作日志</string>
    <string name="account">用户名称</string>
    <string name="password">用户密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="remember_me">记住我</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_account">请输入用户名</string>
    <string name="add">添加</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="view">记录详情</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
</resources>