<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffefebe7">
  

    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#106184">
	
	    <TextView
	        android:id="@+id/titleText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:padding="10.0dip"
	        android:singleLine="true"
	        android:text="@string/register_title"
	        android:textColor="@color/white"
	        android:textSize="15sp" />

    </RelativeLayout>
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/top_relative"
    	android:layout_marginTop="10dp"
    	android:padding="10dp"
    	android:orientation="vertical" >
    	
    	<EditText 
    		android:id="@+id/account"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:hint="@string/register_account_tip" />
    	
    	<EditText 
    	    android:id="@+id/nickname"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="10dp"
    	    android:hint="@string/register_nickname_tip" />
    	
    	<EditText 
    		android:id="@+id/password"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="10dp"
    		android:inputType="textPassword"
    		android:hint="@string/register_password_tip" />
    	
    	<EditText 
    		android:id="@+id/password2"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="10dp"
    		android:inputType="textPassword"
    		android:hint="@string/register_password_again_tip" />
    	
    	<EditText 
            android:id="@+id/second_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/register_second_password_tip" />
    	
    	<Button 
    		android:id="@+id/submit"
    		android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:layout_marginTop="10dp"
    		android:onClick="submit"
    		android:text="@string/register_submit" />
    	
    </LinearLayout>
</RelativeLayout>