<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffefebe7"
    android:gravity="center">
  
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"/>

    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >
    
        <ImageView
            android:id="@+id/progressImage"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:background="@drawable/android_title_bg_progress"
            android:visibility="gone"
            />
    
        <Button
            android:id="@+id/titleRightButton"
            style="\@style/title_right_button"
            android:layout_width="100.0dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5.0dip"
            android:layout_marginTop="2.0dip"
            android:visibility="gone" />
        
    </RelativeLayout>

    <ScrollView
        android:id="@+id/regist_scroller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@id/top_relative"
        >
        

            <RelativeLayout
                android:id="@+id/regist_scroller_relative"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10.0dip"
                android:layout_marginTop="100dp" >

                <TextView
                    android:id="@+id/login_page_input_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="20.0dip"
                    android:paddingTop="10.0dip"
                    android:text="@string/account"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/login_input_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/login_page_input_name"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/login_page_input_name"
                    android:background="@drawable/edit_text_x"
                    android:hint="@string/please_enter_account"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/login_page_input_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/login_page_input_name"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="25.0dip"
                    android:paddingTop="10.0dip"
                    android:text="@string/password"
                    android:textSize="18sp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/login_input_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/login_input_name"
                    android:layout_alignTop="@+id/login_page_input_password"
                    android:layout_below="@+id/login_input_name"
                    android:layout_toRightOf="@+id/login_page_input_password"
                    android:background="@drawable/edit_text_x"
                    android:hint="@string/please_enter_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <CheckBox
                    android:id="@+id/remember_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/login_input_password"
                    android:layout_below="@+id/login_input_password"
                    android:layout_marginTop="15.0dip"
                    android:button="@drawable/login_remember"
                    android:text="@string/remember_me"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="145.0dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/remember_user"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginTop="15.0dip"
                    android:background="@drawable/android_big_button_x"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#ff000000"
                    android:textSize="20.0sp" />

                <Button
                    android:id="@+id/reg_btn"
                    android:layout_width="145.0dip"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/remember_user"
                    android:layout_marginLeft="5.0dip"
                    android:layout_marginTop="15.0dip"
                    android:layout_toRightOf="@+id/login_btn"
                    android:background="@drawable/android_big_button_x"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="#ff000000"
                    android:textSize="20.0sp" />

            </RelativeLayout>
    </ScrollView>
</RelativeLayout>

