<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
      <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:background="#fff" />
        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/console_line_bottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#d10b97"
            android:orientation="vertical" >
            
            <TextView 
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#999"/>

            <RadioGroup
                android:id="@+id/main_tab_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="#d10b97"
                android:gravity="bottom"
                android:orientation="horizontal" >
                <RadioButton
                    android:id="@+id/tab_list"
                    style="@style/tab_bottom"
                    android:checked="true"
                    android:drawableTop="@drawable/tablist_button"
                    android:textColor="#fff"
                    android:text="@string/tab_list" />

                <RadioButton
                    android:id="@+id/tab_notice"
                    style="@style/tab_bottom"
                    android:drawableTop="@drawable/tabnotice_button"
                    android:textColor="#fff"
                    android:text="@string/tab_notice" />

                <RadioButton
                    android:id="@+id/tab_log"
                    style="@style/tab_bottom"
                    android:drawableTop="@drawable/tablog_button"
                    android:textColor="#fff"
                    android:text="@string/tab_log" />

                <RadioButton
                    android:id="@+id/tab_set"
                    style="@style/tab_bottom"
                    android:drawableTop="@drawable/tabset_button"
                    android:textColor="#fff"
                    android:text="@string/tab_set" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</TabHost>